[gd_scene load_steps=11 format=3 uid="uid://dil80q73hnvbt"]

[ext_resource type="Script" path="res://Scripts/Managers/game_manager.gd" id="1_8pybo"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="2_16ona"]
[ext_resource type="PackedScene" uid="uid://dujtkfkjn3agj" path="res://Scenes/Levels/dungeon.tscn" id="2_ljeyd"]
[ext_resource type="PackedScene" uid="uid://dsgxki7n5lrmk" path="res://Scenes/Characters/barbarian.tscn" id="3_2iql4"]
[ext_resource type="Script" path="res://Scripts/spring_arm.gd" id="3_u51m3"]
[ext_resource type="Theme" uid="uid://b1vv3jre6npvq" path="res://menu_buttons.tres" id="6_1b651"]
[ext_resource type="Script" path="res://Scripts/UI/menu.gd" id="6_dr2w1"]
[ext_resource type="Script" path="res://Scripts/UI/fade.gd" id="8_v3vli"]
[ext_resource type="PackedScene" uid="uid://cjk5t1el4suya" path="res://Scenes/settings_menu.tscn" id="9_iopaj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7hssf"]

[node name="Game" type="Node3D" node_paths=PackedStringArray("_character", "_settings_menu", "_fade")]
script = ExtResource("1_8pybo")
_character = NodePath("Barbarian")
_settings_menu = NodePath("UI/Settings Menu")
_fade = NodePath("UI/Fade")

[node name="Dungeon" parent="." instance=ExtResource("2_ljeyd")]

[node name="Barbarian" parent="." instance=ExtResource("3_2iql4")]

[node name="SpringArm3D" type="SpringArm3D" parent="Barbarian"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_7hssf")
spring_length = 5.0
script = ExtResource("3_u51m3")

[node name="Camera" type="Camera3D" parent="Barbarian/SpringArm3D"]
h_offset = 1.0

[node name="Player" type="Node" parent="." node_paths=PackedStringArray("_character", "_spring_arm")]
process_mode = 3
script = ExtResource("2_16ona")
_character = NodePath("../Barbarian")
_spring_arm = NodePath("../Barbarian/SpringArm3D")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pause Menu" type="VBoxContainer" parent="UI" node_paths=PackedStringArray("_default_focus_item")]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -46.5
offset_right = 39.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_1b651")
script = ExtResource("6_dr2w1")
_default_focus_item = NodePath("Continue")

[node name="Title" type="Label" parent="UI/Pause Menu"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="UI/Pause Menu"]
layout_mode = 2
text = "Continue"

[node name="Settings" type="Button" parent="UI/Pause Menu"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="UI/Pause Menu"]
layout_mode = 2
text = "Exit"

[node name="Settings Menu" parent="UI" instance=ExtResource("9_iopaj")]
visible = false

[node name="Fade" type="ColorRect" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("8_v3vli")

[connection signal="pressed" from="UI/Pause Menu/Continue" to="." method="toggle_pause"]
[connection signal="pressed" from="UI/Pause Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Pause Menu/Exit" to="." method="_on_exit_pressed"]
